--- a/Bloggie.Web/Pages/Blog/Details.cshtml
+++ b/Bloggie.Web/Pages/Blog/Details.cshtml
@@ -3,6 +3,7 @@
 
 @using Microsoft.AspNetCore.Identity
 @inject UserManager<IdentityUser> userManager
+@inject SignInManager<IdentityUser> signInManager
 
 @{
 	ViewData["Title"] = Model.BlogPost.PageTitle;
@@ -22,19 +23,22 @@
 
 				<div class="mb-3">
 					<span>
-						@if (Model.Liked)
+						@if (signInManager.IsSignedIn(User))
 						{
-							<a id="btnLike" style="cursor: pointer">
-								<i class="bi bi-hand-thumbs-up-fill"></i>
-							</a>
+							@if (Model.Liked)
+							{
+								<a id="btnLike" style="cursor: pointer">
+									<i class="bi bi-hand-thumbs-up-fill"></i>
+								</a>
+							}
+							else
+							{
+								<a id="btnLike" style="cursor: pointer">
+									<i class="bi bi-hand-thumbs-up"></i>
+								</a>
+							}
 						}
-						else
-						{
-							<a id="btnLike" style="cursor: pointer">
-								<i class="bi bi-hand-thumbs-up"></i>
-							</a>
-						}
-						
+
 						<span id="totalLikes">@Model.TotalLikes</span> likes
 					</span>
 				</div>
@@ -57,6 +61,51 @@
 				<div class="mb-3 blog-details">
 					@Html.Raw(Model.BlogPost.Content)
 				</div>
+
+				<div class="card">
+					<div class="card-header">
+						<h5>Comments</h5>
+
+						@if (signInManager.IsSignedIn(User))
+						{
+							<form method="post">
+								<div class="mb-3">
+									<label class="form-label">Comment Description</label>
+									<input type="text" class="form-control" asp-for="CommentDescription" />
+								</div>
+								<div class="mb-3">
+									<button type="submit" class="btn btn-dark">Add Comment</button>
+									<input type="hidden" asp-for="BlogPostId" />
+								</div>
+							</form>
+						}
+
+					</div>
+					<div class="card-body">
+						@if (Model.Comments != null && Model.Comments.Any())
+						{
+							@foreach (var comment in Model.Comments)
+							{
+								<div class="card mb-3">
+									<div class="card-body">
+										<div>
+											@comment.Description
+										</div>
+										<div class="d-flex justify-content-between">
+											<span class="text-secondary">@comment.UserName</span>
+											<span class="text-secondary">@comment.DateAdded.ToShortDateString()</span>
+										</div>
+									</div>
+								</div>
+							}
+						}
+						else
+						{
+							<p>No Comments.</p>
+						}
+					</div>
+				</div>
+
 			}
 			else
 			{
@@ -67,7 +116,7 @@
 	</div>
 </div>
 
-@section Scripts{
+@section Scripts {
 	<script>
 		const btnLike = document.getElementById('btnLike');
 		const totalLikesElement = document.getElementById('totalLikes');
@@ -100,10 +149,11 @@
 				getTotalLikes();
 			});
 		}
-		if (!Model.Liked)
+		const isLiked = @Model.Liked.ToString().ToLower();
+		if (!isLiked)
 		{
-			btnLike.addEventListener('click', addLikeForBlog);			
-		}		
+			btnLike.addEventListener('click', addLikeForBlog);
+		}
 
 	</script>
 }
