--- a/Bloggie.Web/Pages/Register.cshtml
+++ b/Bloggie.Web/Pages/Register.cshtml
@@ -11,28 +11,31 @@
 
 			<partial name="_Notification">
 
-			<form method="post">
+				<form method="post">
 
-				<div class="mb-3">
-					<label class="form-label">Username</label>
-					<input class="form-control" type="text" asp-for="RegisterViewModel.Username"/>
-				</div>
+					<div class="mb-3">
+						<label class="form-label">Username</label>
+						<input class="form-control" type="text" asp-for="RegisterViewModel.Username" />
+						<span class="text-danger" asp-validation-for="RegisterViewModel.Username"></span>
+					</div>
 
-				<div class="mb-3">
-					<label class="form-label">Email</label>
-					<input class="form-control" type="email" asp-for="RegisterViewModel.Email"/>
-				</div>
+					<div class="mb-3">
+						<label class="form-label">Email</label>
+						<input class="form-control" type="email" asp-for="RegisterViewModel.Email" />
+						<span class="text-danger" asp-validation-for="RegisterViewModel.Email"></span>
+					</div>
 
-				<div class="mb-3">
-					<label class="form-label">Password</label>
-					<input class="form-control" type="password" asp-for="RegisterViewModel.Password"/>
-				</div>
+					<div class="mb-3">
+						<label class="form-label">Password</label>
+						<input class="form-control" type="password" asp-for="RegisterViewModel.Password" />
+						<span class="text-danger" asp-validation-for="RegisterViewModel.Password"></span>
+					</div>
 
-				<div class="mb-3">
-					<button type="submit" class="btn bg-dark text-light">Register</button>
-				</div>
+					<div class="mb-3">
+						<button type="submit" class="btn bg-dark text-light">Register</button>
+					</div>
 
-			</form>
+				</form>
 		</div>
 	</div>
 </div>
