--- a/Bloggie.Web/Pages/Register.cshtml
+++ b/Bloggie.Web/Pages/Register.cshtml
@@ -15,19 +15,19 @@
 
 					<div class="mb-3">
 						<label class="form-label">Username</label>
-						<input class="form-control" type="text" asp-for="RegisterViewModel.Username" />
+						<input class="form-control" type="text" asp-for="RegisterViewModel.Username" required />
 						<span class="text-danger" asp-validation-for="RegisterViewModel.Username"></span>
 					</div>
 
 					<div class="mb-3">
 						<label class="form-label">Email</label>
-						<input class="form-control" type="email" asp-for="RegisterViewModel.Email" />
+						<input class="form-control" type="email" asp-for="RegisterViewModel.Email" required />
 						<span class="text-danger" asp-validation-for="RegisterViewModel.Email"></span>
 					</div>
 
 					<div class="mb-3">
 						<label class="form-label">Password</label>
-						<input class="form-control" type="password" asp-for="RegisterViewModel.Password" />
+						<input class="form-control" type="password" asp-for="RegisterViewModel.Password" required minlength="6"/>
 						<span class="text-danger" asp-validation-for="RegisterViewModel.Password"></span>
 					</div>
 
